# agentsmadeeasy

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: publish.yml
src/: main.py
src/agents_made_easy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/ame/: __init__.py
src/ame/core/: __init__.py  agent_with_self_scheduling.py  agent_with_tools.py  chat_context.py  tools.py
src/ame/examples/agent_with_bash/: agent.py
src/ame/examples/long_running/: agent.py
src/ame/examples/long_running/documentation/contacts/: 714-742-2219.md
src/ame/examples/long_running/documentation/skills/pdf/: SKILL.md  extract_text.sh
src/ame/examples/long_running/utils/: __init__.py  formatting.py
src/ame/examples/simple/: agent.py
src/ame/llms/: __init__.py  llm.py
src/ame/llms/anthropic/: llm.py  models.py  utils.py
src/ame/llms/gemini/: llm.py  models.py  utils.py
