[project]
name = "agents-made-easy"
version = "0.1.2"
description = "Reusable lightweight AI agent utilities"
readme = "README.md"
requires-python = ">=3.13"
authors = [
  { name="Sean Muirhead" }
]
dependencies = [
    "anthropic>=0.75.0",
    "dotenv>=0.9.9",
    "google-genai>=1.56.0",
    "pydantic>=2.12.5",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ame"]
